--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,11 +1,14 @@
 // Colors
 
-$background-1:      #222222;
-$background-2:      #f2f6f8;
-$text-1:            #fff;
-$text-2:            #000;
-$text-3:            #aab2b8;
-$btn-bg:            #32cccc;
 $green:             green;
 $white:             #fff;
+$black:             #000;
+$yellow:            #d2d626;
+$background-1:      #222222;
+$background-2:      #f2f6f8;
+$background-3:      #5d5e5f;
+$text-1:            #fff;
+$text-2:            $black;
+$text-3:            #aab2b8;
+$btn-bg:            #32cccc;
 
