--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -8,6 +8,7 @@
 @import '../../components/DataDisplay/LoadingContent/loadingContent';
 
 /* Containers styles */
+@import '../../containers/Header/header';
 @import '../../containers/Home/home';
 @import '../../containers/Search/search';
 @import '../../containers/Results/results';
