--- a/src/containers/Results/_results.scss
+++ b/src/containers/Results/_results.scss
@@ -1,3 +1,5 @@
+@include fadeIn();
+
 .result-list {
     display: flex;
     flex-wrap: wrap;
@@ -13,6 +15,9 @@
         width: 25%;
         padding: 0 10px;
         margin: 10px 0;
+        opacity: 1;
+        animation: fadeIn .3s;
+
 
         &:hover {
             color: $yellow;
