--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -2,6 +2,7 @@
 
 $green:             green;
 $white:             #fff;
+$red:               #f00;
 $black:             #000;
 $yellow:            #d2d626;
 $background-1:      #222222;
