--- a/src/containers/Header/_header.scss
+++ b/src/containers/Header/_header.scss
@@ -1,9 +1,23 @@
 .page-header { 
-    margin-bottom: 30px;
+    display: flex;
     padding: 10px 15px;
     background-color: rgba(0, 0, 0, .3);
+    height: 60px;
+    align-items: center;
+
+    a {
+        color: $white;
+    }
+
+    .brand {
+        background-color: $red;
+        border-radius: 4px;
+        padding: 0 10px;
+        height: 30px;
+        line-height: 30px;
+    }
     
     h1 {
-        @include pxToRem(30);
+        @include pxToRem(22);
     }
 }
