--- a/src/containers/Profile/_profile.scss
+++ b/src/containers/Profile/_profile.scss
@@ -21,11 +21,18 @@
             width: 100%;
         }
 
-        + a {            
+        + a {    
+            display: block;
+            width: 70px;
             background-color: $yellow;
             color: $black;
-            padding: 10px 16px;           
+            padding: 10px 16px;   
+            margin: 0 0 40px;        
         }
+    }
+
+    .text {
+        margin: 0 30px 0 20px;
     }
 
     strong {
