--- a/src/containers/Profile/_profile.scss
+++ b/src/containers/Profile/_profile.scss
@@ -22,17 +22,26 @@
     }
 
     a.back {    
-        display: block;
-        width: 70px;
+        display: inline-block;
         background-color: $yellow;
         color: $black;
         padding: 10px 16px;   
-        margin: 30px 0 40px;        
+        margin: 30px 0 40px;   
+        @include transition(background-color, .2s, ease-out);
+        
+        &:hover {
+            background-color: $black;
+            color: $yellow;
+        }
     }
 
     
     .text {
         margin: 0 30px 0 20px;
+
+        p {
+            margin-bottom: .76rem;
+        }
     }
 
     .small {
@@ -45,7 +54,7 @@
     }
     
     .plot {
-        margin-top: 20px;
+        margin-top: 2rem;
         color: $text-3;
     }
     
