--- a/src/containers/Header/_header.scss
+++ b/src/containers/Header/_header.scss
@@ -1,6 +1,6 @@
 .page-header { 
     display: flex;
-    padding: 10px 15px;
+    padding: 10px 2rem;
     background-color: rgba(0, 0, 0, .3);
     height: 60px;
     align-items: center;
