--- a/src/containers/Home/_home.scss
+++ b/src/containers/Home/_home.scss
@@ -1,14 +1,13 @@
-.home {    
+.home {
+	.home__icon {
+		margin-bottom: 30px;
+	}
 
-    .home__icon {
-        margin-bottom: 30px;
-    }   
+	p {
+		@include pxToRem(13);
+	}
 
-    p {
-        @include pxToRem(13)
-    }
-
-    .btn {
-        margin-top: 50px;      
-    }
+	.btn {
+		margin-top: 50px;
+	}
 }
