--- a/src/styles/scss/_mixins.scss
+++ b/src/styles/scss/_mixins.scss
@@ -1,10 +1,10 @@
 /* transition */
 @mixin transition($what: all, $time: 0.2s, $how: ease-in-out) {
-    -webkit-transition: $what $time $how;
-    -moz-transition:    $what $time $how;
-    -ms-transition:     $what $time $how;
-    -o-transition:      $what $time $how;
-    transition:         $what $time $how;
+	-webkit-transition: $what $time $how;
+	-moz-transition: $what $time $how;
+	-ms-transition: $what $time $how;
+	-o-transition: $what $time $how;
+	transition: $what $time $how;
 }
 
 /**
@@ -12,10 +12,10 @@
  */
 
 @mixin centerContent() {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	align-items: center;
 }
 
 /**
@@ -23,33 +23,36 @@
  */
 
 @mixin mediaQueries($width, $type: min) {
-    @if map_has_key($breakpoints, $width) {
-        $width: map_get($breakpoints, $width);
-        @if $type == max {
-            $width: $width - 1px;
-        }
-        @media only screen and (#{$type}-width: $width) {
-            @content;
-        }
-    }
+	@if map_has_key($breakpoints, $width) {
+		$width: map_get($breakpoints, $width);
+		@if $type == max {
+			$width: $width - 1px;
+		}
+		@media only screen and (#{$type}-width: $width) {
+			@content;
+		}
+	}
 }
 
 /**
  * Rem-converter mixin to convert px to rem
  */
-@mixin pxToRem($pxValue, $property: "font-size", $standard-size: 16) {
-    #{$property}: $pxValue + px;
-    #{$property}: $pxValue/$standard-size + rem;
+@mixin pxToRem($pxValue, $property: 'font-size', $standard-size: 16) {
+	#{$property}: $pxValue + px;
+	#{$property}: $pxValue/$standard-size + rem;
 }
-
 
 /**
  * Simple fade-in animation
  */
 
 @mixin fadeIn() {
-    @keyframes fadeIn {
-        from { opacity: 0; }
-        to   { opacity: 1; }
-    }
+	@keyframes fadeIn {
+		from {
+			opacity: 0;
+		}
+		to {
+			opacity: 1;
+		}
+	}
 }
