Header style fix

--- a/src/containers/Header/_header.scss
+++ b/src/containers/Header/_header.scss
@@ -1,9 +1,7 @@
 .page-header {
-	display: flex;
-	padding: 10px 2rem;
+	padding: 1rem 0rem;
 	background-color: rgba(0, 0, 0, 0.3);
 	height: 60px;
-	align-items: center;
 	margin-bottom: 10px;
 
 	a {
@@ -16,6 +14,7 @@
 		padding: 0 10px;
 		height: 30px;
 		line-height: 30px;
+		width: 144px;
 	}
 
 	h1 {
