--- a/src/containers/Header/_header.scss
+++ b/src/containers/Header/_header.scss
@@ -1,7 +1,10 @@
 .page-header {
+  position: fixed;
   padding: 1rem 0rem;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.7);
   height: 60px;
+  width: 100%;
+  z-index: 10;
 
   a {
     color: $white;
