--- a/src/containers/Profile/_profile.scss
+++ b/src/containers/Profile/_profile.scss
@@ -3,7 +3,7 @@
 .details {
   opacity: 1;
   animation: fadeIn 1s;
-  margin-bottom: 60px;
+  margin: 30px 0 60px;
 
   h1 {
     @include pxToRem(40);
